2014-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream.
	Luigi fixes a bug on cached attributes.

2014-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid implicit function declarations.
	* am/luafontforge.am (libjitff_a_CPPFLAGS): Add -DLuajitTeX.
	* am/luamisc.am (libluajitmisc_a_CPPFLAGS: Add -DLuajitTeX.
	* lua/liolibext.c, lua/lnodelib.c, luafontloader/src/luafflib.c,
	slnunicode/slnunico.c: Include lauxlib_bridge.h for LuaJITTeX or
	lauxlib.h for LuaTeX.
	* luafontloader/fontforge/fontforge/fontviewbase.c:
	Include gfile.h.	

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Sync with https://foundry.supelec.fr/svn/luatex/trunk/source/
	                  texk/web2c/luatexdir/ r5092.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Avoid MinGW64 warnings (INVALID_SOCKET => -1).

2014-11-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Indentation.

2014-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch] [W32TEX]: Handle DLLPROC as for TeX & Co.
	* am/luatex.am: Define LuajitTeX.

2014-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch]: More sync with ../texmfmp.h and ../lib/texmfmp.c.

2014-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Apply some code from W32TeX.

2014-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Sync with some recent changes in ../lib/texmfmp.c
	(and luatexfirst.c from W32TeX).

2014-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/luatex.am: Factor out common *_LDADD and *_DEPENDENCIES.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writepng.w: Avoid PNG warnings.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
